--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-!/Collection-sites/send-mail.py
+!/Collection-sites/.send-mail.py
 !/External-db/BMsupabase.py
+
